@@ -1,3 +1,8 @@
+2005-05-31  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Object.cs : rework the weakref release mechanism to avoid a
+	couple "resurrection" issues.
+
 2005-05-25  Mike Kestner  <mkestner@novell.com>
 
 	* configure.in.in : remove crosspkgdir arg that causes trouble with
